/*
 * $Id: ChangeLog,v 1.1332 2003/08/07 17:29:53 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-07 11:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/objfunc.prg
    ! Fixed a bad typo.

2003-08-07 14:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbf1.c
    ! Fix dbfPutValue to become compatible with clipper when with error occur( Reported by Marcos Gambeta)

2003-08-03 07:50 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hbmxml.prg
    ! Added missing Checking escapes in attribute values.

  * tests/mtstress.prg
    ! Commented out the well-known bug generators

2003-08-03 04:47 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * tests/mtstress.prg
    ! Added a notice to warn the user that the program is going to
      terminate with an error.

2003-08-06 11:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! removed tracelog calls

2003-08-06 10:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * xharbour.spec
    ! minor Fix
  * source/rtl/isprint.c
    ! fix to getprinters() when used on Windows XP/2K/NT

2003-08-06 12:54 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/fm.c
    ! fixed some castings

2003-08-05 16:41 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/fm.c
    * added code for initializing allocated memory with
      static complex HB_ITEM. This code is compiled when
      macro HB_PARANOID_MEM_CHECK is set and there is no
      macro HB_FM_STATISTICS_OFF
  * xharbour/xharbour.spec
  * xharbour/make_tgz.sh
    * libfm (fm.o with memory statistic) is compiled with
      HB_PARANOID_MEM_CHECK macro

2003-08-05 03:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/cstr.prg
    * Commented leftout TraceLog()

  * source/vm/classes.c