@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1332 2003/08/07 17:29:53 lculik Exp $
+ * $Id: ChangeLog,v 1.1333 2003/08/07 18:27:03 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-08-07 22:23 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
+  * xharbour/source/rdd/dbfntx/dbfntx1.c
+    ! support of binary keys (borrowed from Harbour, many thanks
+      to Alexander)
+
+  * xharbour/source/vm/fm.c
+    * clear MEMINFO signatures in hb_xfree()
 
 2003-08-07 11:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/objfunc.prg
